2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Remove obsolete inherits/disinherits.
	* share/urbi/urbi.u: Use addProto instead of inherits.
	* src/parser/ugrammar.y: Remove inherits / disinherits.
	* src/parser/utoken.l: Ditto.

2008-01-14  Samuel Tardieu  <tardieu@gostai.com>

	Use a name unavailable to the user for temporary purpose.
	* src/parser/ugrammar.y: The user cannot enter 'res' so use it.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	Notes on "nil" object.
	* doc/semantics-issues.org: Notes on "nil" object.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	Declare true and false in Urbi.
	* share/urbi/urbi.u: Declare "true" and "false".
	* src/parser/ugrammar.y: Do not handle "true" and "false" specially.
	* src/parser/utoken.l: Ditto.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	More semantic issues and questions.
	* doc/semantics-issues.org: Update document.

2008-01-11  Loic Fosse  <fosse@gostai.com>

	Fix location handling in Nary.
	* src/ast/ast.yml: Here.

2008-01-11  Akim Demaille  <demaille@gostai.com>

	Remove flavorable.hh.
	* src/flavorable.hh: Remove, unused.
	* src/Makefile.am, src/parser/uparser.hh: Adjust.

2008-01-10  Akim Demaille  <demaille@gostai.com>

	s/arent/roto.
	* share/urbi/urbi.u, src/object/atom.hh, src/object/atom.hxx,
	* src/object/object-class.cc, src/object/object.cc,
	* src/object/object.hh, src/object/object.hxx,
	* src/parser/ugrammar.y, src/runner/runner.cc,
	* src/runner/runner.hxx, src/uobject.cc,
	* src/uobject.hh:
	Prefer proto to parent.
	* tests-local.mk:
	We don't pass 1.x/notag.chk.

2008-01-10  Loic Fosse  <fosse@gostai.com>

	Remove Return node.
	* src/ast/ast.yml: Here.

2008-01-10  Loic Fosse  <fosse@gostai.com>

	Tranform Nary into a list of Stmt.
	* src/ast/ast.yml: Add a Stmt node, and change Nary to use it.
	* src/ast/cloner.hxx: Change cloner to handle std::list<Stmt*>.
	* src/parser/ugrammar.y: Use new Nary methods.